--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "^6.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typeface-rubik": "^1.1.13",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
