--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "d3": "^6.3.1",
+    "ngx-parallax": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeface-rubik": "^1.1.13",
