--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "codegen": "gql-gen"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,10 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@apollo/client": "^3.3.7",
+    "apollo-angular": "^2.2.0",
     "d3": "^6.3.1",
+    "graphql": "^15.4.0",
     "ngx-parallax": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -30,6 +34,10 @@
     "@angular-devkit/build-angular": "~0.1101.0",
     "@angular/cli": "~11.1.0",
     "@angular/compiler-cli": "~11.1.0",
+    "@graphql-codegen/cli": "^1.20.0",
+    "@graphql-codegen/typescript": "^1.20.0",
+    "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@types/d3": "^6.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
