--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "ESNext.AsyncIterable"
     ],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
